[gd_scene load_steps=9 format=2]

[ext_resource path="res://scenes/SettingsNode.gd" type="Script" id=1]
[ext_resource path="res://Silkscreen-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Silkscreen-Bold.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://scenes/MenuButtons.gd" type="Script" id=4]
[ext_resource path="res://scenes/MenuNode.gd" type="Script" id=5]

[sub_resource type="DynamicFont" id=1]
size = 54
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 50
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 50
font_data = ExtResource( 2 )

[node name="UI" type="Node2D"]

[node name="Title" type="Label" parent="."]
margin_top = 109.0
margin_right = 576.0
margin_bottom = 324.0
custom_colors/font_color = Color( 0.788235, 0.537255, 0.537255, 1 )
custom_fonts/font = SubResource( 1 )
text = "Black Holes"
align = 1
valign = 1

[node name="Menu" type="Node2D" parent="."]
script = ExtResource( 4 )

[node name="MenuNode" type="Node2D" parent="Menu"]
script = ExtResource( 5 )

[node name="menu_tween" type="Tween" parent="Menu/MenuNode"]

[node name="Menu" type="VBoxContainer" parent="Menu/MenuNode"]
margin_top = 512.0
margin_right = 576.0
margin_bottom = 733.0

[node name="Start" type="Button" parent="Menu/MenuNode/Menu"]
margin_right = 576.0
margin_bottom = 71.0
custom_colors/font_color_focus = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 2 )
text = "Start"
flat = true

[node name="Settings" type="Button" parent="Menu/MenuNode/Menu"]
margin_top = 75.0
margin_right = 576.0
margin_bottom = 146.0
custom_colors/font_color_focus = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 3 )
text = "Settings"
flat = true

[node name="Quit" type="Button" parent="Menu/MenuNode/Menu"]
margin_top = 150.0
margin_right = 576.0
margin_bottom = 221.0
custom_colors/font_color_focus = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 3 )
text = "Quit"
flat = true

[node name="SettingsNode" type="Node2D" parent="Menu"]
position = Vector2( 576, 0 )
script = ExtResource( 1 )

[node name="settings_tween" type="Tween" parent="Menu/SettingsNode"]

[node name="Settings" type="VBoxContainer" parent="Menu/SettingsNode"]
margin_top = 512.0
margin_right = 576.0
margin_bottom = 733.0

[node name="placeholder" type="Button" parent="Menu/SettingsNode/Settings"]
margin_right = 576.0
margin_bottom = 71.0
custom_colors/font_color_focus = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 2 )
text = "Dummy button1"
flat = true

[node name="blahblah" type="Button" parent="Menu/SettingsNode/Settings"]
margin_top = 75.0
margin_right = 576.0
margin_bottom = 146.0
custom_colors/font_color_focus = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 3 )
text = "Dummy button2"
flat = true

[node name="Back" type="Button" parent="Menu/SettingsNode/Settings"]
margin_top = 150.0
margin_right = 576.0
margin_bottom = 221.0
custom_colors/font_color_focus = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 3 )
text = "Back"
flat = true

[connection signal="pressed" from="Menu/MenuNode/Menu/Start" to="Menu" method="_on_Start_pressed"]
[connection signal="pressed" from="Menu/MenuNode/Menu/Settings" to="Menu" method="_on_Settings_pressed"]
[connection signal="pressed" from="Menu/MenuNode/Menu/Quit" to="Menu" method="_on_Quit_pressed"]
[connection signal="pressed" from="Menu/SettingsNode/Settings/Back" to="Menu" method="_on_Back_pressed"]
